# mergepdf

./: .bumpversion.cfg  .gitignore  README.md  merge_pdf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
mergepdf/: cli.py
tests/: test_cli.py  test_edge_cases.py  test_merge_behavior.py  test_password_protected.py  test_sorting.py  test_utils.py
