[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name="mergepdf"
description="A CLI utility to merge PDF files in a folder."
version = "0.1.10"
requires-python = ">= 3.7"
authors = [{name = "Michal Siedlecki", email = "mi.siedlecki@gmail.com"}]
keywords = ["CLI", "PDF", "merge"]
license = "MIT"
readme = "README.md"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/siedlmi/mergepdf.git"
Issues = "https://github.com/siedlmi/mergepdf/issues"

[project.scripts]
mergepdf = "mergepdf.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }