[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name="mergepdf"
description="A CLI utility to merge PDF files in a folder."
version = "0.1.644"
requires-python = ">= 3.7"
readme = "README.md"
dynamic = ["dependencies"]

[project.scripts]
mergepdf = "mergepdf.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }